# shift_or_euc

./: Cargo.toml  README.md
examples/: detect.rs
src/: lib.rs
